syntax = "proto3";

enum MessageType {
    RESET = 0;
    SET_TARGET = 1;
    STATE = 2;
    GET_STATE = 3;
    CONFIG = 4;
    GET_CONFIG = 5;
}

enum Error {
    NO_ERROR = 0x0; 
    X_OVERFLOW = 0x01; 
    V_OVERFLOW = 0x02; 
    A_OVERFLOW = 0x04; 
    MOTOR_STALLED = 0x8; 
    ENDSTOP_HIT = 0x10;
}

enum Status {
  NEED_RESET = 0;
  HOMING = 1;
  READY = 2;
}

enum TargetType {
  POSITION = 0;
  VELOCITY = 1;
  ACCELERATION = 2;
}

message State {
    int32 error_code = 1; // bitmask-based error code
    float cart_x = 2;     // current cart position [m] 
    float cart_v = 3;     // current cart velocity [m/s] 
    float cart_a = 4;     // current cart acceleration [m/s^2]
    float pole_x = 5;     // current pole angle [rad]
    float pole_v = 6;     // current pole angular velocity [rad/s]
    float imu_a = 7;      // current IMU measured cart acceleration [m/s^2]
    Status status = 8;  
}

message Config {
    float max_cart_x = 1;    // absolute max cart position [m]
    float max_cart_v = 2;    // absolute max cart velocity [m/s]
    float max_cart_a = 3;    // absolute max cart acceleration [m/s^2]
    float hw_cart_max_x = 4; // max calibration-determined cart position [m] 
    float hw_cart_max_v = 5; // max calibration-determined cart speed [m/s]
    float hw_cart_max_a = 6; // max calibration-determined cart acceleration [m/s^2]
}

message Target {
  TargetType type = 0;
  float target = 1;
}
